--- a/force-app/main/default/classes/SepaDirectDebitDetailsTest.cls
+++ b/force-app/main/default/classes/SepaDirectDebitDetailsTest.cls
@@ -1,6 +1,10 @@
 @isTest
 public class SepaDirectDebitDetailsTest {
 
+    /**
+    * Test method to enhance code coverage for Apex Modals; This ain't validating any specific business use case.
+    * Enhances code coverage for SepaDirectDebitDetails apex class
+    */
     @isTest
     private static void testAllMethodsFromSepaDirectDebitDetails(){
         SepaDirectDebitDetails testInstance1 = SepaDirectDebitDetails.getExample();
