--- a/force-app/main/default/classes/AdyenClientTest.cls
+++ b/force-app/main/default/classes/AdyenClientTest.cls
@@ -1,6 +1,10 @@
 @isTest
 public class AdyenClientTest {
 
+    /**
+    * Test method to enhance code coverage for Apex Modals; This ain't validating any specific business use case.
+    * Enhances code coverage for AdyenClient apex class
+    */
     @isTest
     private static void testAllMethodsFromAdyenClient(){
         Test.setMock(HttpCalloutMock.class, new ApiLibMock.AdyenPaymentsSuccessMock());
