--- a/force-app/main/default/classes/CaptureRequestTest.cls
+++ b/force-app/main/default/classes/CaptureRequestTest.cls
@@ -1,6 +1,10 @@
 @isTest
 public class CaptureRequestTest {
 
+    /**
+    * Test method to enhance code coverage for Apex Modals; This ain't validating any specific business use case.
+    * Enhances code coverage for CaptureRequest apex class
+    */
     @isTest
     private static void testAllMethodsFromCaptureRequest(){
         CaptureRequest testInstance = new CaptureRequest();
