--- a/force-app/main/default/classes/CaptureResponseTest.cls
+++ b/force-app/main/default/classes/CaptureResponseTest.cls
@@ -1,6 +1,10 @@
 @isTest
 public class CaptureResponseTest {
 
+    /**
+    * Test method to enhance code coverage for Apex Modals; This ain't validating any specific business use case.
+    * Enhances code coverage for CaptureResponse apex class
+    */
     @isTest
     private static void testAllMethodsFromCaptureResponse(){
         CaptureResponse testCR = new CaptureResponse();
