--- a/force-app/main/default/classes/PaymentMethodsRequestTest.cls
+++ b/force-app/main/default/classes/PaymentMethodsRequestTest.cls
@@ -1,6 +1,10 @@
 @isTest
 public class PaymentMethodsRequestTest {
 
+    /**
+    * Test method to enhance code coverage for Apex Modals; This ain't validating any specific business use case.
+    * Enhances code coverage for PaymentMethodsRequest apex class
+    */
     @isTest
     private static void testAllMethodsFromPaymentMethodsRequest(){
         PaymentMethodsRequest testInstance1 = PaymentMethodsRequest.getExample();
