--- a/force-app/main/default/classes/PaymentsResponseTest.cls
+++ b/force-app/main/default/classes/PaymentsResponseTest.cls
@@ -1,6 +1,10 @@
 @isTest
 public class PaymentsResponseTest {
 
+    /**
+    * Test method to enhance code coverage for Apex Modals; This ain't validating any specific business use case.
+    * Enhances code coverage for PaymentsResponse apex class
+    */
     @isTest
     private static void testAllMethodsFromPaymentsResponse(){
         PaymentsResponse testInstance1 = PaymentsResponse.getExample();
