Replacing Modals with Models

--- a/force-app/main/default/classes/PaymentsResponseTest.cls
+++ b/force-app/main/default/classes/PaymentsResponseTest.cls
@@ -2,7 +2,7 @@
 public class PaymentsResponseTest {
 
     /**
-    * Test method to enhance code coverage for Apex Modals; This ain't validating any specific business use case.
+    * Test method to enhance code coverage for Apex Models; This ain't validating any specific business use case.
     * Enhances code coverage for PaymentsResponse apex class
     */
     @isTest
