--- a/force-app/main/default/classes/ACHDetailsTest.cls
+++ b/force-app/main/default/classes/ACHDetailsTest.cls
@@ -1,7 +1,7 @@
 @isTest
 public class ACHDetailsTest {
     /**
-    * Test method to enhance code coverage for Apex Modals; This ain't validating any specific business use cases.
+    * Test method to enhance code coverage for Apex Models; This ain't validating any specific business use cases.
     * Enhances code coverage for ACHDetails apex class
     */
     @isTest
