Changes to address salesforce security review feedback

--- a/force-app/main/default/classes/ACHDetails.cls
+++ b/force-app/main/default/classes/ACHDetails.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class ACHDetails implements PaymentMethodDetails {
+public with sharing class ACHDetails implements PaymentMethodDetails {
     /**
     * Get encryptedBankAccountNumber
     * @return encryptedBankAccountNumber
