--- a/force-app/main/default/classes/ApiLibMock.cls
+++ b/force-app/main/default/classes/ApiLibMock.cls
@@ -1,5 +1,5 @@
 @namespaceAccessible
-public class ApiLibMock {
+public with sharing class ApiLibMock {
 
     @namespaceAccessible
     public static String mockPaymentsResponseSuccess() {
