--- a/force-app/main/default/classes/ApplicationInfo.cls
+++ b/force-app/main/default/classes/ApplicationInfo.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class ApplicationInfo {
+public with sharing class ApplicationInfo {
     /**
     * Get adyenLibrary
     * @return adyenLibrary
