--- a/force-app/main/default/classes/CaptureRequest.cls
+++ b/force-app/main/default/classes/CaptureRequest.cls
@@ -3,7 +3,7 @@
 */
 
 @namespaceAccessible
-public class CaptureRequest {
+public with sharing class CaptureRequest {
     public String originalReference;
     public Amount modificationAmount;
     public String reference;
