--- a/force-app/main/default/classes/CaptureResponse.cls
+++ b/force-app/main/default/classes/CaptureResponse.cls
@@ -3,7 +3,7 @@
 */
 
 @namespaceAccessible
-public class CaptureResponse {
+public with sharing class CaptureResponse {
     public String pspReference;
     public String response;
     public CaptureResponse(){}
