--- a/force-app/main/default/classes/DefaultPaymentMethodDetails.cls
+++ b/force-app/main/default/classes/DefaultPaymentMethodDetails.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class DefaultPaymentMethodDetails implements PaymentMethodDetails {
+public with sharing class DefaultPaymentMethodDetails implements PaymentMethodDetails {
     /**
     * @return type
     */
