--- a/force-app/main/default/classes/InputDetail.cls
+++ b/force-app/main/default/classes/InputDetail.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class InputDetail {
+public with sharing class InputDetail {
     /**
     * Configuration parameters for the required input.
     * @return configuration
