--- a/force-app/main/default/classes/Name.cls
+++ b/force-app/main/default/classes/Name.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class Name {
+public with sharing class Name {
     /**
     * The first name.
     * @return firstName
