--- a/force-app/main/default/classes/PaymentMethodsResponse.cls
+++ b/force-app/main/default/classes/PaymentMethodsResponse.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class PaymentMethodsResponse {
+public with sharing class PaymentMethodsResponse {
     /**
     * Groups of payment methods.
     * @return groups
