--- a/force-app/main/default/classes/PaymentsResponse.cls
+++ b/force-app/main/default/classes/PaymentsResponse.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class PaymentsResponse {
+public with sharing class PaymentsResponse {
     /**
     * Action to be taken for completing the payment.
     * @return action
