--- a/force-app/main/default/classes/RiskData.cls
+++ b/force-app/main/default/classes/RiskData.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class RiskData {
+public with sharing class RiskData {
     /**
     * Contains client-side data, like the device fingerprint, cookies, and specific browser settings.
     * @return clientData
