--- a/force-app/main/default/classes/StoredDetails.cls
+++ b/force-app/main/default/classes/StoredDetails.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class StoredDetails {
+public with sharing class StoredDetails {
     /**
     * Get card
     * @return card
