--- a/force-app/main/default/classes/Card.cls
+++ b/force-app/main/default/classes/Card.cls
@@ -10,7 +10,7 @@
 */
 
 @namespaceAccessible
-public class Card {
+public with sharing class Card {
     /**
     * The [card verification code](https://docs.adyen.com/payments-fundamentals/payment-glossary#card-security-code-cvc-cvv-cid) (1-20 characters). Depending on the card brand, it is known also as:\n* CVV2/CVC2 – length: 3 digits\n* CID – length: 4 digits\n> If you are using [Client-Side Encryption](https://docs.adyen.com/classic-integration/cse-integration-ecommerce), the CVC code is present in the encrypted data. You must never post the card details to the server.\n> This field must be always present in a [one-click payment request](https://docs.adyen.com/classic-integration/recurring-payments).\n> When this value is returned in a response, it is always empty because it is not stored.
     * @return cvc
